# azure_spatial_anchors_ros

./: .gitignore  README.md
asa_ros/: CMakeLists.txt  package.xml
asa_ros/include/asa_ros/: asa_bag_reader.h  asa_interface.h  asa_ros_node.h  asa_ros_provider.h
asa_ros/include/asa_ros/internal/: asa_helper.h  wait_for_value.h
asa_ros/launch/: asa_ros.launch  intel_t265.launch
asa_ros/src/: asa_bag_reader.cpp  asa_bag_reader_main.cpp  asa_interface.cpp  asa_ros_node.cpp  asa_ros_provider.cpp
asa_ros/src/internal/: asa_helper.cpp
asa_ros_msgs/: CMakeLists.txt  package.xml
asa_ros_msgs/msg/: CreateAnchorFeedback.msg  CreatedAnchor.msg  FoundAnchor.msg
asa_ros_msgs/srv/: CreateAnchor.srv  FindAnchor.srv
