<?xml version="1.0"?>
<package format="2">
  <name>asa_ros_msgs</name>
  <version>0.0.3</version>
  <description>Message definitions for the ASA ROS interface.</description>

  <maintainer email="helen.oleynikova@microsoft.com">Helen Oleynikova</maintainer>

  <author email="helen.oleynikova@microsoft.com">Helen Oleynikova</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

  <depend>geometry_msgs</depend>
</package>
